# routes/product.js
@@ -9,10 +9,8 @@ router.get('/', productController.products);
 
 router.post('/create',productController.create);
 
-router.delete('/delete/:id',productController.delete);
+router.delete('/:id',productController.delete);
 
 router.post('/:id/update_quantity/',productController.update);
-
-// router.use('/:id',require('./product_params'));
 
 module.exports = router;
