# routes/product_params.js
@@ -1,12 +1,0 @@
-
-const express = require('express');
-
-const router = express.Router();
-
-// const paramsController = require('../controllers/deleteAndUpdateController');
-const productController = require('../controllers/productsController');
-
-router.delete('/',productController.delete);
-router.post('/update_quantity/',productController.update);
-
-module.exports = router;
